--- a/project/templates/forget_password.html
+++ b/project/templates/forget_password.html
@@ -3,10 +3,12 @@
 
 {% block content %}
 <div class="column is-4 is-offset-4">
+    <div class="box">
 
-        <div class="container">
   <form class="centerform" method="POST" action="/resetpassword">
-    <p style="font-size:200%;" class="textcenter">Forgot Your Password </p>
+    <br>
+      <h1 class="textcenter">Forgot Your Password </h1>
+    <br>
       <div class="box">
         {% with messages = get_flashed_messages() %}
         {% if messages %}
@@ -16,14 +18,12 @@
         {% endif %}
         {% endwith %}
         <label name="id" for="id"><p class="hova"> *</p> Id</label>
-        <input type="id" placeholder="id" name="id"><br>
-        <label name="email" for="email"><br> <p class="hova"> *</p> Email</label>
-        <input type="email" placeholder="Email" name="email">
+        <input type="id" placeholder="id" name="id" class="form-control" style="width:70%">
+        <label name="email" for="email"> <p class="hova"> *</p> Email</label>
+        <input type="email" placeholder="Email" name="email" class="form-control" style="width:70%">
               <button class="pushable" >
-                  <span class="front raise shadowed" >
-                      Send Mail
-              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" class="artdeco-icon lazy-loaded" focusable="false" >
-                        <path d="M14 12L8 3.06 9.55 2l6.19 9.15a1.5 1.5 0 010 1.69L9.55 22 8 20.94z" fill="rgba(0, 0, 0, 0.6)"></path></svg>
+                  <span class="form-control" >
+                      <b>Send Mail</b>
                   </span>
               </button>
   </form>
