--- a/project/templates/signup.html
+++ b/project/templates/signup.html
@@ -3,20 +3,20 @@
 {% block content %}
 
 <body>
-    <div class="split left">
+<div class="split left12">
   <div class="centered12">
     <p class="description">I am here to give</p>
     <a href="/gmah_signup"> <img src="https://i.ibb.co/jfV6M0n/gmahsignup-modified.png" alt="GmahSignUp" width="80%" height="80%" style="margin-top:15%"></a>
     <br>
   </div>
 </div>
-<div class="split right">
+<div class="split right12">
   <div class="centered12">
-       <p class="description">I am here to borrow</p>
+       <p class="description" style="font-size:66px;">I am here to borrow</p>
    <a href="/user_signup"><img src="https://i.ibb.co/gRv8Yw8/user.png" alt="UserSignUp" width="80%" height="80%" style="margin-top:8%;"></a>
   </div>
 </div>
-</div>
+
 </body>
 
 {% endblock %}
