--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-<section class="hero is-primary is-fullheight sticky">
+<section class="hero is-primary is-fullheight sticky topnav">
 
     <div class="hero-head">
         <div class="navbar navbar-inverse">
@@ -29,8 +29,7 @@
                                     class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
                             </button>
                                 <a href="{{ url_for('main.index') }}" class="navbar-brand">
-                                    <img src="https://i.ibb.co/8M29bd5/Removal-963.png"
-                                         alt="Logo" width="120%" height="240%" style="margin-top: -25%;">
+                                <img src={{url_for('static',filename='images/navbar.jpeg')}} alt="Logo"  style="margin-top: -25%;">
                                 </a>
                         </div>
                         <div class="navbar-collapse collapse" id="mobile_menu">
