--- a/project/templates/donate_items.html
+++ b/project/templates/donate_items.html
@@ -15,26 +15,28 @@
         <br>
         <h1 class="textcenter" >Donate Items</h1>
         <br>
+        {% if current_user.is_authenticated %}
         <input type="text" name="user_id" value="{{ current_user.id }}" hidden>
+        {% endif %}
     <!--    <input type="text" name="category" value="{{ current_user.category }}" hidden>-->
-        <label for="name" ><b>Product name</label>
+        <label for="name" ><b>Product name</b></label>
         <input type="name" name="name" id="name" placeholder="Search Anything Here..." class="form-control" style="width:70%">
-        <label for="description" ><b>Description</label>
+        <label for="description" ><b>Description</b></label>
         <input type="name" name="description" id="description" placeholder="Search Anything Here..." class="form-control" style="width:70%">
-        <label for="upload_product" ><b>Product Photo</label>
+        <label for="upload_product" ><b>Product Photo</b></label>
         <input style="margin-bottom:5%;margin-top:2%" type="file" id="file" name="file" class="form-control" >
         <label style="margin-left:25%;display: inline;" for="search">Choose gmah to donate:</label>
         <select id="gmah_id" name="gmah_id" size="1" style="margin-left:10%;display: inline;">
         {% for gmah in gmah_list %}
-            <option name="gmah_id" value={{gmah.id}}>{{gmah.id}}</option>
+            <option name="gmah_id" value={{gmah.id}}>{{gmah.name}}</option>
         {% endfor %}
           <label style="margin-left:35%;" for="search">Choose a category:</label>
         </select><br><br>
         {% if not current_user.is_authenticated %}
-            <label for="donate_name" ><b>Your Name</label>
-            <input type="donate_name" name="donate_name" id="donate_name" placeholder="Search Anything Here..." class="form-control" style="width:70%">
-            <label for="donate_phone" ><b>Your Phone number</label>
-            <input type="donate_phone" name="donate_phone" id="donate_phone" placeholder="Search Anything Here..." class="form-control" style="width:70%">
+            <label for="donate_name" ><b>Your Name</b></label>
+            <input type="donate_name" name="donate_name" id="donate_name" placeholder="Search Anything Here..." required class="form-control" style="width:70%">
+            <label for="donate_phone" ><b>Your Phone number</b></label>
+            <input type="donate_phone" name="donate_phone" id="donate_phone" placeholder="Search Anything Here..." required class="form-control" style="width:70%">
         {% else %}
 
         {% endif %}
