try-except-borrow

--- a/project/templates/custom_search.html
+++ b/project/templates/custom_search.html
@@ -4,7 +4,7 @@
 <h2 style="font-family: 'Optima';text-align:center;margin-bottom:5%">Custom Search Page</h2>
 
 <div style="width:90%; margin-left:5%;">
-    <div style="float:left;width:33%;border: 1px solid black;">
+    <div style="float:left;width:33%;">
 <h2 class="headersearch gap">Search Gmah By City</h2>
 <form action="/searchgmahbycity" method="POST" class="customesearch">
     <input type="search" name="search" id="search" placeholder="Search Anything Here..." class="form-control submitfont">
@@ -12,10 +12,10 @@
 
 </form>
 </div>
-    <div style="float:left;width:33%;border: 1px solid black;">
+    <div style="float:left;width:33%;">
 <h2 class="headersearch">Search Gmah By Category</h2>
 <form action="/searchgmahbycategory" method="POST" class="customesearch">
-  <label  for="search" style="margin:10% 0 0 15%;font-family: 'Optima';">Choose a category:
+  <label  for="search" style="margin:8% 0 0 15%;font-family: 'Optima';">Choose a category:
   <select id="search" name="search" size="1" style="font-family: 'Optima';margin-left:10%;">
      {% for category in categories %}
     <option name="search" value={{category.category}} >{{category.category}}</option>
@@ -24,7 +24,7 @@
   <input style="width:30%;margin:0% 0 6.5% 35% " type="submit" class="form-control submitfont">
 </form>
       </div>
-    <div style="float:left;width:33%;border: 1px solid black;">
+    <div style="float:left;width:33%;">
 <h2 class="headersearch gap" >Search Product</h2>
 <form action="/searchforproduct" method="POST" class="customesearch">
     <input type="search" name="search" id="search" placeholder="Search Anything Here..." class="form-control submitfont">
